// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabBarItem should render correctly when border is true 1`] = `
<View
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "paddingVertical": 15,
      },
      null,
      {
        "borderColor": "#DDDDDD",
        "borderWidth": 1,
      },
    ]
  }
>
  <Text
    style={
      [
        {
          "color": "#777777",
          "fontSize": 17,
        },
        null,
      ]
    }
  >
    title
  </Text>
</View>
`;

exports[`TabBarItem should render correctly when selected is true 1`] = `
<View
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "paddingVertical": 15,
      },
      {
        "backgroundColor": "#FFFFFF",
      },
      null,
    ]
  }
>
  <Text
    style={
      [
        {
          "color": "#777777",
          "fontSize": 17,
        },
        null,
      ]
    }
  >
    title
  </Text>
</View>
`;

exports[`TabBarItem should render correctly when title and type is equal 1`] = `
<View
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "paddingVertical": 15,
      },
      null,
      null,
    ]
  }
>
  <Text
    style={
      [
        {
          "color": "#777777",
          "fontSize": 17,
        },
        null,
      ]
    }
  >
    ALl
  </Text>
</View>
`;
